--- a/src/app/countries/components/country-table/country-table.component.html
+++ b/src/app/countries/components/country-table/country-table.component.html
@@ -23,12 +23,17 @@
         <td>{{ i + 1 }}</td>
         <td>{{ country.flag }}</td>
         <td>
-          <img [src]="country.flags.svg" [alt]="country.name.common" width="30" height="30"/>
+          <img
+            [src]="country.flags.svg"
+            [alt]="country.name.common"
+            width="30"
+            height="30"
+          />
         </td>
         <td>{{ country.name.common }}</td>
         <td>{{ country.capital }}</td>
         <td>{{ country.population | number }}</td>
-        <td><a href="#">Ver más</a></td>
+        <td><a [routerLink]="['/countries/by', country.cca3]">Detalles</a></td>
       </tr>
     </tbody>
   </table>
