--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="row mt-4">
-  <div class="col-3">
+  <div class="col-3 col-md-3 col-sm-12">
     <!-- Sidebar -->
    <shared-sidebar></shared-sidebar>
   </div>
 
-  <div class="col">
+  <div class="col-9 col-md-9 col-sm-12">
     <!--  Páginas -->
     <router-outlet></router-outlet>
   </div>
