--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,9 +3,30 @@
 <hr />
 
 <ul class="list-group">
-  <li routerLink="countries/by-capital" routerLinkActive="active" class="list-group-item" role="button">Por Capital</li>
-  <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item" role="button">Por País</li>
-  <li routerLink="countries/by-region" routerLinkActive="active" class="list-group-item" role="button">Por Region </li>
+  <li
+    routerLink="countries/by-capital"
+    routerLinkActive="active"
+    class="list-group-item"
+    role="button"
+  >
+    Por Capital
+  </li>
+  <li
+    routerLink="countries/by-country"
+    routerLinkActive="active"
+    class="list-group-item"
+    role="button"
+  >
+    Por País
+  </li>
+  <li
+    routerLink="countries/by-region"
+    routerLinkActive="active"
+    class="list-group-item"
+    role="button"
+  >
+    Por Region
+  </li>
 </ul>
 
 <!-- routerLinkActive="router-link-active"  -->
