--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -7,6 +7,7 @@
     <shared-search-box
       placeholder="Buscar por país"
       (onValue)="searchByCountry($event)"
+      (onDebounce)="searchByCountry($event)"
     ></shared-search-box>
   </div>
 </div>
