--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -7,6 +7,7 @@
     <shared-search-box
       placeholder="Buscar por región"
       (onValue)="searchByRegion($event)"
+      (onDebounce)="searchByRegion($event)"
     ></shared-search-box>
   </div>
 </div>
