--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,21 +1,13 @@
-  <div class="row align-items-center">
-    <div class="col-12 col-md-10">
+  <div class="row">
+    <div class="col">
       <input
         type="text"
         [placeholder]="placeholder"
         class="form-control"
         #txtSearch
         (keyup.enter)="emitValue(txtSearch.value)"
+        (keyup)="onKeyPress(txtSearch.value)"
       />
     </div>
 
-    <div class="col-12 col-md-2 mt-1">
-      <button
-        class="btn btn-primary w-100"
-        type="button"
-        (click)="emitValue(txtSearch.value)"
-      >
-        Enviar
-      </button>
-    </div>
   </div>
