Se implementó cacheStore con tap de rjx

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -3,6 +3,7 @@
       <input
         type="text"
         [placeholder]="placeholder"
+        [value]="initialValue"
         class="form-control"
         #txtSearch
         (keyup.enter)="emitValue(txtSearch.value)"
