--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,6 +6,7 @@
     <!-- SearchBox -->
     <shared-search-box
       placeholder="Buscar por capital"
+      [initialValue]="initialTerm"
       (onValue)="searchByCapital($event)"
       (onDebounce)="searchByCapital($event)"
     ></shared-search-box>
