--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -6,6 +6,7 @@
     <!-- SearchBox -->
     <shared-search-box
       placeholder="Buscar por país"
+      [initialValue]="initialTerm"
       (onValue)="searchByCountry($event)"
       (onDebounce)="searchByCountry($event)"
     ></shared-search-box>
@@ -14,6 +15,7 @@
 <div class="row">
   <div class="col">
     <hr />
+     <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <!-- Tabla -->
     <countries-table [countries]="countries"></countries-table>
   </div>
