--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,20 +2,24 @@
 <hr />
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- SearchBox -->
-    <shared-search-box
-      placeholder="Buscar por región"
-      (onValue)="searchByRegion($event)"
-      (onDebounce)="searchByRegion($event)"
-    ></shared-search-box>
+    <button
+      *ngFor="let region of regions"
+      type="button"
+      class="btn mx-2"
+      [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+      (click)="searchByRegion(region)"
+    >
+      {{ region }}
+    </button>
   </div>
 </div>
 <div class="row">
   <div class="col">
     <hr />
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <!-- Tabla -->
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
-
